--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
     </div>
     <div class="btn-con">
         <!-- 일반 참관객 설문지 링크 주소 -->
-        <a href="http://www.naver.com">
+        <a href="https://forms.gle/RXMq7T1yS5V8ic9A9">
             <button type="button" class="btn btn-info btn-left btn-lg">
                 <span class="figure_graph">
                     <i class="fas fa-user"></i>
@@ -152,7 +152,7 @@
             </button>
         </a>
         <!-- 산업종사자 설문지 링크 주소 -->
-        <a href="http://www.kopet.com">
+        <a href="https://forms.gle/Adp1QTMeMVEBS6pP8">
             <button type="button" class="btn btn-info btn-right btn-lg">
                 <span class="figure_graph">
                         <i class="fas fa-user-tie"></i>
